--- a/package.json
+++ b/package.json
@@ -37,15 +37,14 @@
         "yargs": "^7.0.2"
     },
     "dependencies": {
-        "@angular/animations": "^5.2.0",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/http": "^5.2.0",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
-        "@angular/router": "^5.2.0",
+        "@angular/animations": "8.1.1",
+        "@angular/common": "8.1.1",
+        "@angular/compiler": "8.1.1",
+        "@angular/core": "8.1.1",
+        "@angular/forms": "8.1.1",
+        "@angular/platform-browser": "8.1.1",
+        "@angular/platform-browser-dynamic": "8.1.1",
+        "@angular/router": "8.1.1",
         "@types/core-js": "^0.9.37",
         "@types/lodash.clonedeep": "^4.5.2",
         "@types/node": "^6.0.48",
@@ -66,7 +65,7 @@
         "raw-loader": "^0.5.1",
         "reflect-metadata": "^0.1.3",
         "rimraf": "^2.6.2",
-        "rxjs": "^5.5.6",
+        "rxjs": "6.5.2",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.19.1",
         "to-string-loader": "^1.1.5",
@@ -75,7 +74,7 @@
         "uglifyjs-webpack-plugin": "^1.1.6",
         "webpack": "^3.10.0",
         "webpack-merge": "^0.15.0",
-        "zone.js": "^0.8.20"
+        "zone.js": "0.9.1"
     },
     "keywords": [
         "angular-seed"
