--- a/package.json
+++ b/package.json
@@ -52,16 +52,18 @@
         "angular-router-loader": "^0.8.5",
         "angular2-template-loader": "^0.6.2",
         "awesome-typescript-loader": "^5.2.1",
-        "bootstrap": "4.0.0-beta.3",
+        "bootstrap": "^4.3.1",
         "config": "^1.25.1",
         "core-js": "^2.4.1",
         "cpr": "^3.0.1",
         "css-loader": "^0.28.8",
         "ie-shim": "^0.1.0",
+        "jquery": "^3.4.1",
         "lodash.clonedeep": "^4.5.0",
         "mkdirp": "^0.5.1",
         "node-sass": "^4.12.0",
         "pluralize": "^4.0.0",
+        "popper.js": "^1.15.0",
         "raw-loader": "^3.0.0",
         "reflect-metadata": "^0.1.3",
         "rimraf": "^2.6.2",
